# pytorch_learning

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker_build.sh  docker_run.sh
