[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24"
pandas = "^2.0"
matplotlib = "^3.7"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
torch = "^2.1,<2.2"
torchvision = "^0.16.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
